--- a/contact.html
+++ b/contact.html
@@ -1,134 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Computer Society of India, GITAM Student Branch.">
-	<link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png"><link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png"><link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png"><link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png"><link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png"><link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png"><link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png"><link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png"><link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png"><link rel="icon" type="image/png" sizes="192x192"  href="assets/favicon/android-icon-192x192.png"><link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png"><link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png"><link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png"><link rel="manifest" href="/manifest.json"><meta name="msapplication-TileColor" content="#ffffff"><meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Computer Society of India, GITAM Student Branch.">
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 
-	<title>CSI | Computer Society of India | GITAM Student Branch</title>
+    <title>CSI | Computer Society of India | GITAM Student Branch</title>
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-	<link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link href="style.css" rel="stylesheet">
 </head>
+
 <body>
-
-	<header>
-		<nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
-			<a class="navbar-brand" href="index.html">
-				<img src="assets/brand/logo-csi.jpg" width="40" height="40" class="d-inline-block align-top" alt=""> <span class="logo-title">CSI</span> </a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarCollapse">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="events.html">Events</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="gallery.html">Gallery</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="team.html">Team</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-					</li>
-				</ul>
-				<ul class="nav navbar-nav ml-auto social-icons">
-					<li>
-						<a href="https://www.facebook.com/gitamcsi/" target="_blank" class="nav-link"><i class="fa fa-facebook fa-lg"></i></a>
-					</li>
-					<li>
-						<a href="https://www.instagram.com/csi_gitam/" target="_blank" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a>
-					</li>
-					<li>
-						<a href="https://www.youtube.com/channel/UC3WGSLJhICY8pheX9GBikJg" target="_blank" class="nav-link"><i class="fa fa-youtube fa-lg"></i></a>
-					</li>
-					<li>
-						<a href="https://github.com/csigitam" target="_blank" class="nav-link"><i class="fa fa-github fa-lg"></i></a>
-					</li>
-					<li>
-						<a href="credits.html" class="nav-link"><i class="fa fa-info fa-lg"></i></a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</header>
-
-	<div role="main">
-
-		<div class="jumbotron j-contact">
-			<div class="container">
-				<h1 class="display-3">Contact Us</h1>
-				<p>Do you have any interesting ideas you'd like to share? Got a plan to execute a project or an event? Get it to CSI, we will make it happen.<br> Any queries? Reach out to us!</p>
-			</div>
-		</div>
-
-
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4">
-					<h2>For Registrations,</h2>
-					<p>Fill in the following form to sign up for CSI membership. (Applicable only for students of GITAM, Visakhapatnam.)</p>
-					<p><a class="btn btn-lg btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSd1mpR74gKp9kUfBPN4WYPzCSiax83Ezeq7Se26KnOHfNABXQ/viewform" target="_blank" role="button">Register Now &raquo;</a></p>
-				</div>
-				<div class="col-lg-4">
-					<h2>For enquries,</h2>
-					<p></p>
-					<p>Email us at <a href="mailto:teamcsi@gitam.edu">teamcsi@gitam.edu</a></p>
-					<p><a class="btn btn-lg btn-primary" href="https://www.facebook.com/gitamcsi/" target="_blank" role="button">Contact us on Facebook &raquo;</a></p>
-				</div>
-				<div class="col-lg-4 g-map">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3799.2353112901123!2d83.37372529955334!3d17.780634695966484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a395b1cdf012f1b%3A0x6c1c27dfb649611a!2sChandrahas+Bhavan%2C+Rushikonda%2C+Visakhapatnam%2C+Andhra+Pradesh+530045%2C+India!5e0!3m2!1sen!2sus!4v1508218001772" frameborder="0" allowfullscreen></iframe>
-				</div>
-			</div>
-
-			<hr class="featurette-divider">
-
-			<div class="row featurette">
-				<div class="col-md-12">
-					<h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
-					<br>
-					<table class="table table-hover table-borderless">
-						<tbody>
-							<tr>
-								<td>Aditya</td>
-								<td><a href="tel:+919542196003">+91 95421 96003</a></td>
-							</tr>
-							<tr>
-								<td>Ajit</td>
-								<td><a href="tel:+918895567749">+91 88955 67749</a></td>
-							</tr>
-							<tr>
-								<td>Harsha</td>
-								<td><a href="tel:+919652988096">+91 96529 88096</a></td>
-							</tr>
-							<tr>
-								<td>Nikhil</td>
-								<td><a href="tel:+918978087191">+91 89780 87191</a></td>
-							</tr>
-							<tr>
-								<td>Subhash</td>
-								<td><a href="tel:+919100062658">+91 91000 62658</a></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</div>
-			<hr class="featurette-divider">
-		</div>
-
-		<footer class="container">
-			<p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits.html">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
-		</footer>
-	</div>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
+            <a class="navbar-brand" href="index.html">
+				<img src="assets/brand/logo-csi.jpg" width="40" height="40" class="d-inline-block align-top" alt="CSI Logo"> <span class="logo-title">CSI</span> </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="events.html">Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="team.html">Team</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav ml-auto social-icons">
+                    <li>
+                        <a href="https://www.facebook.com/gitamcsi/" target="_blank" class="nav-link"><i class="fa fa-facebook fa-lg"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/csi_gitam/" target="_blank" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/channel/UC3WGSLJhICY8pheX9GBikJg" target="_blank" class="nav-link"><i class="fa fa-youtube fa-lg"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/csigitam" target="_blank" class="nav-link"><i class="fa fa-github fa-lg"></i></a>
+                    </li>
+                    <li>
+                        <a href="credits.html" class="nav-link"><i class="fa fa-info fa-lg"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div role="main">
+        <div class="jumbotron j-contact">
+            <div class="container">
+                <h1 class="display-3">Contact Us</h1>
+                <p>Do you have any interesting ideas you'd like to share? Got a plan to execute a project or an event? Get it to CSI, we will make it happen.
+                    <br> Any queries? Reach out to us!</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <h2>For Registrations,</h2>
+                    <p>Fill in the following form to sign up for CSI membership. (Applicable only for students of GITAM, Visakhapatnam.)</p>
+                    <p><a class="btn btn-lg btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSd1mpR74gKp9kUfBPN4WYPzCSiax83Ezeq7Se26KnOHfNABXQ/viewform" target="_blank" role="button">Register Now &raquo;</a></p>
+                </div>
+                <div class="col-lg-4">
+                    <h2>For enquries,</h2>
+                    <p></p>
+                    <p>Email us at <a href="mailto:teamcsi@gitam.edu">teamcsi@gitam.edu</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="https://www.facebook.com/gitamcsi/" target="_blank" role="button">Contact us on Facebook &raquo;</a></p>
+                </div>
+                <div class="col-lg-4 g-map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3799.2353112901123!2d83.37372529955334!3d17.780634695966484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a395b1cdf012f1b%3A0x6c1c27dfb649611a!2sChandrahas+Bhavan%2C+Rushikonda%2C+Visakhapatnam%2C+Andhra+Pradesh+530045%2C+India!5e0!3m2!1sen!2sus!4v1508218001772" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-12">
+                    <h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
+                    <br>
+                    <table class="table table-hover table-borderless">
+                        <tbody>
+                            <tr>
+                                <td>Aditya</td>
+                                <td><a href="tel:+919542196003">+91 95421 96003</a></td>
+                            </tr>
+                            <tr>
+                                <td>Ajit</td>
+                                <td><a href="tel:+918895567749">+91 88955 67749</a></td>
+                            </tr>
+                            <tr>
+                                <td>Harsha</td>
+                                <td><a href="tel:+919652988096">+91 96529 88096</a></td>
+                            </tr>
+                            <tr>
+                                <td>Nikhil</td>
+                                <td><a href="tel:+918978087191">+91 89780 87191</a></td>
+                            </tr>
+                            <tr>
+                                <td>Subhash</td>
+                                <td><a href="tel:+919100062658">+91 91000 62658</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+        </div>
+        <footer class="container">
+            <p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits.html">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
+        </footer>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
+
 </html>
